# HOMMIE

./: README.md  face_cascade.py  firedetection.py  qrcode tracking(pyqt5).py
Project_hommie/: ALL.py  face_data.json  firetopic.py  객체추적까지 업그레이드중.py  얼굴사람화재자율순찰.html  얼굴사람화재자율순찰.py  웹 최종.html  최종.py
Project_hommie/침입자 캡쳐 후 리스트 저장 웹서버 확인 완료/: unknown_faces.html  view_image.html  외부인 캡쳐 웹서버 확인 완료.html  외부인 캡쳐 웹서버 확인 완료.py
cartographer_youngwon/: my_robot.lua  trajectory_builder_2d.lua  trajectory_builder_3d.lua
opencv(woojin)/: FireDetectionNode.py  practice object tracking.py  qrcode tracking.py
qr_station/: CMakeLists.txt  package.xml
qr_station/launch/: qr_launch_file.launch  spawn_station_with_qr.launch
qr_station/models/: station_with_qr.sdf
qr_station/scripts/: random_qr_generator.py  spawn_station_with_qr.py
qr_station/textures/qr_code_image/: qr_code_image.py
random_patrol_package/: CMakeLists.txt  package.xml
random_patrol_package/src/: random_patrol (사본).py  random_patrol.py
