<package format="2">
  <name>random_patrol_package</name>
  <version>0.0.0</version>
  <description>The random_patrol_package</description>

  <maintainer email="youremail@domain.com">Your Name</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>move_base_msgs</depend>
  <depend>actionlib</depend>

  <export>
  </export>
</package>

